# dltflow

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  dltflow.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.html  requirements.txt  search.html  searchindex.js  setup.py  tox.ini  utils.py  welcome.html
.github/workflows/: tests.yaml
_sources/: index.rst.txt  requirements.txt  welcome.md.txt
_sources/_static/: examples.md.txt
_sources/autoapi/: index.rst.txt
_static/: examples.html  examples.md  references.html  references.md
_static/examples/: base.html  base.md  medium.html  simple.html  simple.md  streaming_append.html  streaming_append.md  streaming_cdc.html
_static/references/: cli_reference.html
autoapi/: index.html
autoapi/dltflow/: index.html
cli/: deploy.py  initialize.py  utils.py
cli/models/: deployment.py
dltflow/: utils.py
dltflow/cli/: deploy.py  initialize.py  interface.py  reader.py  utils.py
dltflow/quality/: __init__.py  config.py  dlt_meta.py  exceptions.py
docs/: conf.py  index.rst  requirements.txt
docs/_static/: examples.md  references.md
examples/: README.md
examples/conf/: medium_dlt_pipeline_with_expectations.yml  simple_dlt_pipeline_with_expectations.yml  streaming_append_dlt_pipeline.yml  streaming_apply_changes_dlt.yml
examples/deployment/: deploy_medium_dlt_pipeline_with_expectations.sh  deploy_simple_dlt_pipeline_with_expectations.sh  (+2 more)
quality/: __init__.py  config.py  dlt_meta.py  exceptions.py
tests/: fixtures.py
(+53 files in other folders)
